--- a/src/app/modules/employees/employees.component.html
+++ b/src/app/modules/employees/employees.component.html
@@ -1,1 +1,62 @@
-<p>employees works!</p>
+<div class="employees-table-title">
+  <h2>Lista de Empleados</h2>
+</div>
+
+<div class="employees-table-container">
+  <mat-form-field class="employees-table-filter">
+    <mat-label>Filtro</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ej. Juanito Perez"
+      #input />
+  </mat-form-field>
+
+  <table
+    mat-table
+    [dataSource]="employeeDataSource"
+    multiTemplateDataRows
+    class="employees-table">
+    <!-- Position Column -->
+    <ng-container matColumnDef="ID">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="Nombre">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="Apellido Paterno">
+      <th mat-header-cell *matHeaderCellDef>Apellido Paterno</th>
+      <td mat-cell *matCellDef="let element">{{ element.middleName }}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Apellido Materno">
+      <th mat-header-cell *matHeaderCellDef>Apellido Materno</th>
+      <td mat-cell *matCellDef="let element">{{ element.surName }}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="Acciones">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <a mat-stroked-button routerLink=".">Detalle</a>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="employeeTableColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: employeeTableColumns"></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">
+        No hay datos que coincidan con el filtro "{{ input.value }}"
+      </td>
+    </tr>
+  </table>
+</div>
